relay-general/src/pii/snapshots/relay_general__pii__convert__tests__contexts.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "contexts": {
    "app": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "app"
    },
    "biz": {
      "a_password_here": "[Filtered]",
      "apiKey": "[Filtered]",
      "api_key": "[Filtered]",
      "foo": "bar",
      "password": "[Filtered]",
      "the_secret": "[Filtered]",
      "type": "biz"
    },
    "browser": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "browser"
    },
    "device": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "device"
    },
    "gpu": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "gpu"
    },
    "monitor": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "monitor"
    },
    "os": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "os"
    },
    "runtime": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "runtime"
    },
    "secret": null,
    "trace": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello",
      "type": "trace"
    }
  },
  "_meta": {
    "contexts": {
      "biz": {
        "a_password_here": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "apiKey": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "api_key": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "the_secret": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        }
      },
      "secret": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      }
    }
  }
}
