relay-general/src/pii/snapshots/relay_general__pii__convert__tests__convert_sensitive_fields_too_large.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "user": {
    "data": {
      "1": "[Filtered]"
    }
  },
  "_meta": {
    "user": {
      "data": {
        "1": {
          "": {
            "rem": [
              [
                "strip-fields",
                "s",
                0,
                10
              ]
            ],
            "len": 4
          }
        }
      }
    }
  }
}
