relay-general/src/pii/snapshots/relay_general__pii__convert__tests__does_sanitize_encrypted_private_key.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN ENCRYPTED PRIVATE KEY-----\n[Filtered]\n-----END ENCRYPTED PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey:filter",
              "s",
              40,
              50
            ]
          ],
          "len": 277
        }
      }
    }
  }
}
