relay-general/src/pii/snapshots/relay_general__pii__convert__tests__explicit_fields.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "mystuff": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "mystuff": {
        "": {
          "rem": [
            [
              "strip-fields",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
