relay-general/src/pii/snapshots/relay_general__pii__convert__tests__http_remote_addr_stripped.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "request": {
    "env": {
      "REMOTE_ADDR": "[ip]"
    }
  },
  "_meta": {
    "request": {
      "env": {
        "REMOTE_ADDR": {
          "": {
            "rem": [
              [
                "@ip:replace",
                "s",
                0,
                4
              ]
            ],
            "len": 9
          }
        }
      }
    }
  }
}
